--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,6 +10,14 @@
             "request": "launch",
             "mode": "auto",
             "program": "${workspaceFolder}"
-        }
+        },
+        {
+            "name": "Launch Day",
+            "type": "go",
+            "request": "launch",
+            "mode": "auto",
+            "program": "${workspaceFolder}",
+            "args": ["-year", "2023", "-day", "4"]
+        },
     ]
 }
